# zen_chat_bot

./: .env  .gitignore  alembic.ini  link.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4462c35cdb52_initial_migration.py
app/: env.py
app/database/: column_definictions.py  data_base.py  mixins.py  models.py
app/schemas/: base_model.py  db_exceptions.py  exceptions.py
app/web_scraper/: data_scraper.py  get_link.py
logger/: log.py
